<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!-- Creating rounded corners for the Constraint Layout, while adding a shadow
    android:background="@drawable/shadow"-->

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView_header"
            android:layout_width="385dp"
            android:layout_height="161dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imageView_header"
            android:cropToPadding="false"
            android:importantForAccessibility="auto"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/textView_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/rounded_corners"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/imageView_favorite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="44dp"
            android:contentDescription="@string/imageView_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/favorite"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/button_category"
            android:layout_width="162dp"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_style"
            android:clickable="false"
            android:text="@string/button_category"
            android:textAllCaps="false"
            android:textColor="#9575CD"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_title"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/textView_title"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_header" />

        <ImageView
            android:id="@+id/imageView_duration"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/imageView_duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_category"
            app:srcCompat="@drawable/duration" />

        <ImageView
            android:id="@+id/imageView_images"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/imageView_images"
            app:layout_constraintEnd_toStartOf="@+id/textView_threesixtyimages"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_audio"
            app:srcCompat="@drawable/images" />

        <ImageView
            android:id="@+id/imageView_audio"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/imageView_audio"
            app:layout_constraintEnd_toStartOf="@+id/textView_languages"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_duration"
            app:srcCompat="@drawable/audio" />

        <TextView
            android:id="@+id/textView_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/textView_from"
            android:textColor="#979797"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_rating"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/textView_languages"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView_audio"
            app:layout_constraintTop_toBottomOf="@+id/textView_duration" />

        <TextView
            android:id="@+id/textView_threesixtyimages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/textView_threesixtyimages"
            android:textColor="#979797"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView_images"
            app:layout_constraintTop_toBottomOf="@+id/textView_languages"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/textView_duration"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView_duration"
            app:layout_constraintTop_toBottomOf="@+id/button_category" />

        <TextView
            android:id="@+id/textView_perperson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/textView_perperson"
            android:textColor="#979797"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_price"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/textView_price"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView_perperson"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_from" />

        <TextView
            android:id="@+id/textView_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/textView_rating"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_header" />

        <ImageView
            android:id="@+id/imageView_rating"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/imageView_rating"
            app:layout_constraintEnd_toStartOf="@+id/textView_rating"
            app:layout_constraintTop_toBottomOf="@+id/imageView_header"
            app:srcCompat="@drawable/star"
            tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>